Changes for 1.6
* Fixed a ton of lock not held errors that had resulted from new technology code. (veqryn)

* Fixed Economy panel so that it would change when you click back through history. (tao nie)

* Created default attachment for Long Range Air, which will now be set to give +2 movement to all air units, that are air units at the start of the game. Also changing Pact of Steel 2 to have Long Range Air give only +1 movement. (veqryn)

* Created framework for interpreting TechAbilityAttachment's, and also setting of default attachments for hardcoded technologies. (veqryn) 

* Created new type of attachment, TechAbilityAttachment, which will control how all technologies work. (veqryn)

* Refactoring TechAdvance and GenericTechAdvance to extend NamedAttachable, that way they can eventually have attachments. (veqryn)

* Fixed bug where a NonFighting battle was attempting to add the result as a child in the history panel, without creating the event first. (veqryn)

* Fixed bug preventing Moore AI from placing Transport type sea units whenever it did not buy non-transport sea units. (veqryn)

* Clearing all cached data for AIs once a game has been left. (veqryn)

* Clearing cached data for Dynamix AI once a game has been left. (frigoref)

* Fixed issue with battles showing who won twice in the history panel. (veqryn)

* Moving BattleRecord to its own class, and having BattleRecord, BattleRecords, and BattleResults all extend GameDataComponent. (veqryn)

* Possibly fixing the problems with Edit Mode, by fixing a previous refactoring that switched two variables up. (veqryn)

* Possibly fixing the problems with Edit Mode, by abstracting BasePersistentDelegate and separating EditDelegate from BaseDelegate. (veqryn)

* Generating Serial IDs for all classes that may need them. (veqryn)


Changes for 1.5.2.1
* Updated 1940 test xml to allow Axis powers to declare war on Americans separately, and for Americans to declare war on each Axis power separately. (veqryn)
